--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@
 
   /* Size */
   --size-border-radius: 4px;
+
+  /* Animation */
+  --animation-duration: 300ms;
 }
 
 /* 공통 */
@@ -150,4 +153,72 @@ p {
   padding: 8px 12px;
   border: 2px solid var(--color-white);
   border-radius: var(--size-border-radius);
+}
+
+/* Section common */
+.section {
+  padding: 50px;
+  text-align: center;
+  max-width: 1200px;
+  margin: auto;
+}
+
+/* About */
+.about__majors {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
+}
+
+.major__icon {
+  width: 170px;
+  height: 170px;
+  line-height: 170px;
+  font-size: 70px;
+  margin: auto;
+  color: var(--color-blue);
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  margin-bottom: 16px;
+}
+
+.major__icon i {
+  transition: all var(--animation-duration) ease;
+}
+
+.major__icon:hover i {
+  color: blue;
+  transform: rotate(-30deg) scale(1.2);
+}
+
+.major__title,
+.major__description {
+  color: var(--color-dark-grey);
+}
+
+.major__description {
+  font-size: var(--font-small);
+}
+
+.edu {
+  display: flex;
+  align-items: center;
+}
+
+.edu__description {
+  margin: 0 16px;
+  text-align: left;
+}
+
+.edu__name,
+.edu__period {
+  color: var(--color-light-grey);
+}
+
+.edu__name {
+  font-size: var(--font-small);
+}
+
+.edu__period {
+  font-size: var(--font-micro);
 }
