--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 h2 {
-  font-size: var(--font-regular);
+  font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
   color: var(--color-black);
   margin: 8px 0px;
@@ -295,6 +295,8 @@ p {
 .category__btn:hover {
   background-color: var(--color-light-grey);
   color: var(--color-white);
+  opacity: 1;
+  top: 0;
 }
 
 .work__projects {
@@ -303,7 +305,7 @@ p {
   justify-content: center;
 }
 
-.porject {
+.project {
   position: relative;
   display: flex;
   justify-content: center;
@@ -317,11 +319,12 @@ p {
 .project__img {
   max-width: 100%;
   max-height: 100%;
+  align-self: center;
 }
 
-.porject__description {
+.project__description {
   position: absolute;
-  background-color: var(--color-black);
+  background-color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -334,19 +337,24 @@ p {
   transition: all var(--animation-duration) ease-in;
 }
 
-.project:hover .porject__description {
+.project:hover .project__description {
   opacity: 0.8;
   transform: translateY(0px);
 }
-.porject__description h3 {
+
+.project__description h3 {
   color: var(--color-white);
 }
 
-.porject__description h3:after {
+.project__description h3:after {
   content: "";
+  display: block;
+  position: relative;
+  left: 50%;
   width: 25px;
   height: 2px;
   margin-left: -12px;
+  margin-top: 8px;
   background-color: var(--color-dark-white);
 }
 
@@ -387,4 +395,32 @@ p {
 
 .testimonial__speech-bubble p {
   color: var(--color-light-grey);
+}
+
+/* Contact */
+#contact {
+  background-color: var(--color-light-grey);
+}
+
+.contact__title,
+.contatct__email {
+  color: var(--color-white);
+}
+
+.contact__title {
+  margin: 32px 0;
+}
+
+.contact__links {
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+
+.contact_links i {
+  transition: all var(--animation-duration) ease-in;
+}
+
+.contact__links i:hover {
+  transform: scale(1.1);
+  color: var(--color-yellow);
 }
