--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 
 a {
   text-decoration: none;
-  counter-reset: var(--color-white);
+  color: var(--color-white);
 }
 
 ul {
@@ -57,7 +57,7 @@ li {
 }
 
 button {
-  background: transparent;
+  background-color: transparent;
   cursor: pointer;
   border: none;
   outline: none;
@@ -92,6 +92,27 @@ p {
   margin: 4px 0;
 }
 
+/* Scroll */
+.arrow-up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 70px;
+  height: 70px;
+  font-size: 50px;
+  color: var(--color-white);
+  background-color: var(--color-light-grey);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 300ms ease-in;
+}
+
+.arrow-up.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 /* Navbar */
 #navbar {
   position: fixed;
@@ -114,6 +135,10 @@ p {
 
 .navbar__menu {
   display: flex;
+}
+
+.navbar__menu.open {
+  display: block;
 }
 
 .navbar__logo {
@@ -178,6 +203,10 @@ p {
   border-radius: var(--size-border-radius);
 }
 
+.home__contact:hover {
+  background-color: var(--color-blue);
+}
+
 /* Section common */
 .section {
   padding: 50px;
@@ -231,6 +260,11 @@ p {
 .edu {
   display: flex;
   align-items: center;
+}
+
+.edu img {
+  width: 70px;
+  height: 70px;
 }
 
 .edu__description {
@@ -452,16 +486,33 @@ p {
 @media screen and (max-width: 768px) {
   .navbar__toggle-btn {
     display: block;
+    top: 16px;
+    right: 16px;
+    font-size: var(--font-medium);
   }
   #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-light-grey);
+  }
+
+  #navbar.navbar--dark {
+    padding: 16px;
   }
 
   .navbar__menu {
     flex-direction: column;
     text-align: center;
     width: 100%;
+    display: none;
+  }
+
+  .navbar__menu.open {
+    display: block;
+  }
+
+  .section {
+    padding: 16px;
   }
 
   .about__majors {
@@ -480,8 +531,32 @@ p {
     flex-grow: 1;
   }
 
+  .testimonial {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .testimonial__avatar {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
+  }
+
+  .testimonial__avata:nth-child(even),
+  .testimonial__avata:nth-child(odd) {
+    margin: 0;
+    margin-bottom: 20px;
+  }
+
+  .testimonial__speech-bubble {
+    order: 1;
+  }
+
+  .arrow-up {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    line-height: 30px;
+    right: 16px;
+    bottom: 16px;
   }
 }
