--- a/style.css
+++ b/style.css
@@ -221,6 +221,11 @@ p {
 }
 
 /* About */
+
+.about__description {
+  font-size: var(--font-medium);
+}
+
 .about__majors {
   display: flex;
   justify-content: space-between;
@@ -419,6 +424,14 @@ p {
   margin: 12px;
 }
 
+.testimonial__avata2 {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 12px;
+  margin-left: 36px;
+}
+
 .testimonial__avata:nth-child(odd) {
   margin-right: 40px;
 }
@@ -524,8 +537,19 @@ p {
     height: 120px;
   }
 
+  .testimonial__avatar2 {
+    width: 120px;
+    height: 120px;
+  }
+
   .testimonial__avata:nth-child(even),
   .testimonial__avata:nth-child(odd) {
+    margin: 0;
+    margin-bottom: 20px;
+  }
+
+  .testimonial__avata2:nth-child(even),
+  .testimonial__avata2:nth-child(odd) {
     margin: 0;
     margin-bottom: 20px;
   }
